# test-task

./: .dockerignore  .env  .env.example  API_EXAMPLES.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Makefile  PORTS.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  start.sh  stop.sh
alembic/: env.py
alembic/versions/: 001_create_initial_tables.py
app/api/: activities.py  buildings.py  organizations.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  models.py
app/schemas/: schemas.py
scripts/: seed_data.py
tests/: test_app.py
