[project]
name = "test-task"
version = "0.1.0"
description = "REST API application for Organizations, Buildings, and Activities directory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "psycopg2-binary>=2.9.9",
    "geoalchemy2>=0.15.2",
    "shapely>=2.0.4",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "httpx>=0.27.2",
]
